--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "match-sorter": "^6.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.3",
     "react-hook-form": "^7.49.2",
